kubernetes/alb/albIngressController.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: alb-ingress-controller
  name: alb-ingress-controller
  namespace: kube-system
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: alb-ingress-controller
  template:
    metadata:
      labels:
        app.kubernetes.io/name: alb-ingress-controller
    spec:
      containers:
        - name: alb-ingress-controller
          args:
            - --ingress-class=alb
            - --cluster-name=EKS_CLUSTER
            - --aws-vpc-id=VPC_ID
            - --aws-region=ap-northeast-2
          image: docker.io/amazon/aws-alb-ingress-controller:v2.2.0
      serviceAccountName: alb-ingress-controller
